--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 python-a2s
 trio==0.18.0
 trio-typing==0.5.0
-trio-paho-mqtt==0.3.1
+# trio-paho-mqtt==0.3.1
+git+https://github.com/bkanuka/trio-paho-mqtt.git@master#egg=trio-paho-mqtt
